# gcp-playground

./: README.md  pyproject.toml
functions/helloworld/: main.py
